--- a/front/src/app/pages/home/home.component.scss
+++ b/front/src/app/pages/home/home.component.scss
@@ -1,7 +1,5 @@
-.center {
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+.github-link {
+  position: absolute;
+  bottom: 0;
+  margin-bottom: 1em;
 }
