--- a/front/src/app/app.component.scss
+++ b/front/src/app/app.component.scss
@@ -5,6 +5,13 @@ h1 {
   margin: 0;
 }
 
+h2 {
+  font-size: 24px;
+  font-weight: 600;
+  line-height: 29.05px;
+  margin-bottom: 0;
+}
+
 a {
   font-size: 20px;
   font-weight: 400;
