--- a/front/src/app/pages/ThemesPage/themesPage.component.html
+++ b/front/src/app/pages/ThemesPage/themesPage.component.html
@@ -1,4 +1,6 @@
 <div class="flex flex-col items-center justify-center">
     <app-base-navbar-component></app-base-navbar-component>
-    <app-theme-feed-component></app-theme-feed-component>
+    <div class="w-screen flex flex-col p-5 gap-5">
+        <app-theme-feed-component></app-theme-feed-component>
+    </div>
 </div>
