--- a/front/src/app/components/Articles/ArticleFeed/articleFeed.component.html
+++ b/front/src/app/components/Articles/ArticleFeed/articleFeed.component.html
@@ -1,7 +1,7 @@
 <section class="flex w-full">
     <p *ngIf="!articles || articles.length === 0">No items available at the moment</p>
     <div *ngIf="articles && articles.length > 0" class="w-full flex flex-wrap justify-between" [ngClass]="{'flex-col': isSmallScreen}">
-        <app-base-card-component 
+        <app-base-card 
             *ngFor="let article of articles"
             [link]="['/articles/detail', article.id!.toString()]"
             [title]="article.title" 
@@ -10,6 +10,6 @@
             [content]="article.content"
             [ellipsis]=5
             [ngStyle]="{'width': isLargeScreen ? 'calc(50% - 24px)' : '100%', 'margin-bottom': '24px'}" style="cursor: pointer;">
-        </app-base-card-component>
+        </app-base-card>
     </div>
 </section>
