--- a/front/src/app/pages/Articles/articlesPage.component.html
+++ b/front/src/app/pages/Articles/articlesPage.component.html
@@ -1,5 +1,5 @@
 <div class="flex flex-col items-center justify-center" >
-    <app-base-navbar-component></app-base-navbar-component>
+    <app-base-navbar></app-base-navbar>
     <div class="w-screen flex flex-col p-5 gap-5">
         <section class="w-full flex items-center justify-between gap-5" [ngClass]="{'flex-col': isSmallScreen}">
             <button type="button" class="primary-btn" routerLink="/articles/create" >Create article</button>
@@ -9,6 +9,6 @@
                 <mat-icon *ngIf="isAscendingOrder" aria-hidden="false" aria-label="Sort items by asc order" fontIcon="north"></mat-icon>
             </div>
         </section>
-        <app-article-feed-component [articles]="articles"></app-article-feed-component>
+        <app-article-feed [articles]="articles"></app-article-feed>
     </div>
 </div>
